[gd_scene load_steps=2 format=3 uid="uid://bs1yufc4ng1b"]

[ext_resource type="Script" uid="uid://c6sh4o6hs8d7x" path="res://main_menu.gd" id="1_yqorp"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_yqorp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 644.0
offset_bottom = 352.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 108.0
offset_right = 424.0
offset_bottom = 318.0
alignment = 1

[node name="Meu jogo" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Laws of the land"
horizontal_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Iniciar Jogo"

[node name="LoadButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Carregar"

[node name="QuitButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="SaveStatusLabel" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
